--- a/bower.json
+++ b/bower.json
@@ -27,18 +27,19 @@
     "README.md"
   ],
   "dependencies": {
-    "jquery": "~2.1.4",
-    "lodash": "~3.10.1",
-    "angular": "~1.5.8",
-    "angular-sanitize": "~1.5.8",
-    "angular-animate": "~1.5.8",
-    "angular-material": "1.1.1",
-    "angular-material-icons": "~v0.6.0"
+    "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
+    "angular": "^1.7.8",
+    "angular-animate": "^1.7.8",
+    "angular-aria": "^1.7.8",
+    "angular-material": "^1.1.19",
+    "angular-material-icons": "^0.7.1",
+    "angular-sanitize": "^1.7.8"
   },
   "devDependencies": {
-    "angular-mocks": "~1.5.8"
+    "angular-mocks": "~1.7.8"
   },
   "resolutions": {
-    "angular": "~1.5.8"
+    "angular": "~1.7.8"
   }
 }
