--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "gulp-angular-filesort": "~1.1.1",
     "gulp-angular-templatecache": "~1.8.0",
     "gulp-cached": "~1.1.0",
-    "gulp-compass": "~2.1.0",
     "gulp-concat": "~2.6.0",
     "gulp-connect": "~2.3.1",
     "gulp-inject": "~3.0.0",
@@ -28,6 +27,7 @@
     "gulp-plumber": "~1.0.1",
     "gulp-rename": "~1.2.2",
     "gulp-rimraf": "~0.2.0",
+    "gulp-sass": "^4.0.2",
     "gulp-uglify": "~1.5.1",
     "gulp-watch": "~4.3.5",
     "jasmine-core": "^2.4.1",
@@ -41,7 +41,6 @@
     "karma-ng-scenario": "~0.1.0",
     "karma-phantomjs-launcher": "~0.2.1",
     "karma-traceur-preprocessor": "~0.4.0",
-    "lodash": "~3.10.1",
     "main-bower-files": "~2.11.0",
     "phantomjs": "^2.1.7",
     "run-sequence": "~1.1.5",
@@ -49,13 +48,13 @@
     "wallaby-ng-html2js-preprocessor": "^0.1.0"
   },
   "dependencies": {
-    "angular": "~1.5.8",
-    "angular-animate": "~1.5.8",
-    "angular-aria": "~1.5.8",
-    "angular-material": "1.1.1",
-    "angular-material-icons": "~v0.6.0",
-    "angular-sanitize": "~1.5.8",
-    "jquery": "~2.1.4",
-    "lodash": "~3.10.1"
+    "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
+    "angular": "^1.7.8",
+    "angular-animate": "^1.7.8",
+    "angular-aria": "^1.7.8",
+    "angular-material": "^1.1.19",
+    "angular-material-icons": "^0.7.1",
+    "angular-sanitize": "^1.7.8"
   }
 }
