build(update): Update a current versions
Versioning

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "md-data-table",
-  "version": "2.2.0",
+  "version": "v2.2.4",
   "homepage": "https://github.com/iamisti/mdDataTable",
   "author":"Istvan Fodor <programtervezo@gmail.com>",
   "main": [
