--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "md-data-table",
-  "version": "2.2.0",
+  "version": "v2.2.4",
   "author": "Istvan Fodor <programtervezo@gmail.com>",
   "registry": "github",
   "repository": {
